# podly_pure_podcasts

./: .dockerignore  .env.example  .gitignore  .releaserc.cjs  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  Pipfile.lite  README.md  compose.dev.cpu.yml  compose.dev.yml  compose.yml  pyproject.toml  run_podly_docker.sh
.github/: pull_request_template.md
.github/workflows/: conventional-commit-check.yml  docker-publish.yml  lint-and-format.yml  release.yml
docs/: CODE_REVIEW_TROUBLESHOOTING.md  configuration.md  contributors.md  how_to_run_beginners.md  performance_optimization.md  setup_semantic_release_token.md
frontend/: package-lock.json  tailwind.config.js
frontend/public/: CHANGELOG.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AddFeedForm.tsx  AudioPlayer.tsx  ChangelogModal.tsx  ChapterProcessingStats.tsx  DiagnosticsModal.tsx  EpisodeProcessingStatus.tsx  FeedDetail.tsx  FeedList.tsx  LLMProcessingStats.tsx  ProcessingStatsButton.tsx  ReprocessButton.tsx
frontend/src/components/config/: ConfigContext.tsx  ConfigTabs.tsx  index.ts
frontend/src/components/config/sections/: AppSection.tsx  LLMSection.tsx  OutputSection.tsx  PromptSection.tsx  WhisperSection.tsx  index.ts
frontend/src/components/config/shared/: ConnectionStatusCard.tsx  EnvOverrideWarningModal.tsx  EnvVarHint.tsx  Field.tsx  Section.tsx  constants.ts
frontend/src/components/config/tabs/: AdvancedTab.tsx  DefaultTab.tsx  DiscordTab.tsx  UserManagementTab.tsx  index.ts
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useConfigState.ts
frontend/src/pages/: BillingPage.tsx  HomePage.tsx  JobsPage.tsx  LoginPage.tsx  StatsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: ci.sh  create_migration.sh  downgrade_db.sh  generate_lockfiles.sh  manual_publish.sh  new_worktree.sh  test_full_workflow.py  upgrade_db.sh
src/app/: __init__.py  background.py  config_store.py  db_backup.py  db_guard.py  feeds.py  job_manager.py  jobs_manager.py  jobs_manager_run_service.py  models.py  post_cleanup.py  posts.py  runtime_config.py  timeout_decorator.py
src/app/auth/: __init__.py  feed_tokens.py  guards.py  service.py  settings.py
src/app/routes/: __init__.py  billing_routes.py  config_routes.py  feed_routes.py  feed_utils.py  jobs_routes.py  main_routes.py  post_routes.py  post_stats_utils.py  stats_routes.py
src/app/writer/: client.py  executor.py  protocol.py
src/app/writer/actions/: __init__.py  cleanup.py  feeds.py  jobs.py  processor.py  system.py  users.py
src/migrations/versions/: 3d75ed7cb11a_merge_heads.py  5bccc39c9685_zero_initial_allowance.py  7598fce23984_add_llm_github_model_to_llm_settings.py  a1b2c3d4e5f7_add_performance_indices_for_posts.py  c1a2b3d4e5f6_add_llm_github_pat.py  f6d5fee57cc3_tz_fix.py  zierhh7a95ew_add_db_backup_columns.py
src/podcast_processor/: ad_classifier.py  ad_merger.py  audio.py  audio_processor.py  boundary_refiner.py  cue_detector.py  llm_concurrency_limiter.py  llm_error_classifier.py  llm_model_call_utils.py  model_output.py  podcast_downloader.py  podcast_processor.py  processing_status_manager.py  prompt.py  token_rate_limiter.py  transcribe.py  transcription_manager.py  word_boundary_refiner.py
src/shared/: config.py  defaults.py  interfaces.py
src/tests/: conftest.py  test_ad_classifier.py  test_aggregate_feed.py  test_audio_processor.py  test_config_error_handling.py  test_feeds.py  test_post_cleanup.py  test_post_routes.py  test_post_stats_utils.py  test_process_audio.py  test_storage_stats.py  test_transcribe.py  test_transcription_manager.py  test_writer_cleanup_actions.py
